Final FINAL Code for Assignment 2
Went back through and cleaned up and fixed as much as possible!

--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
                 <header>
                     <h1>Campus Commerce Provider</h1>
                     <p>We offer solutions to process every payment on campus. We are PCI Level 1 Validated and integrate with every major ERP.</p>
+                </header>    
                     <div id="btn-one">
                         <a href="#">Sign Up</a>     
                     </div> 
-                </header>
             </div>
         </div>
     </div>
@@ -147,10 +147,11 @@ Increase affordability, reduce administrative burdens, and improve access by all
                 </header>
                 <p>Offer an electronic payment gateway to corporations or organizations that wish to sponsor students by paying part or all of their tuition and fees.</p>
             </div>
-            <div id="btn-two">
+            
+           
+        </div><div id="btn-two">
             	<a href="#">Contact</a>     
-            </div> 
-        </div>
+              </div> 
     </div>
 </section>
 <!--SERVICES SECTION-->
